[gd_scene load_steps=5 format=3 uid="uid://bxhfa4fltovbh"]

[ext_resource type="Script" path="res://scripts/draw_path.gd" id="1_s6kjp"]

[sub_resource type="Curve3D" id="Curve3D_kfjlp"]

[sub_resource type="BoxMesh" id="BoxMesh_wrw54"]
size = Vector3(0.1, 0.1, 0.1)

[sub_resource type="SphereShape3D" id="SphereShape3D_74w4j"]
radius = 0.1

[node name="PlayerController" type="Node3D"]
script = ExtResource("1_s6kjp")

[node name="PlayerPath" type="Path3D" parent="."]
curve = SubResource("Curve3D_kfjlp")

[node name="PlayerPathFollow" type="PathFollow3D" parent="PlayerPath"]
transform = Transform3D(0.707105, 0, -0.707105, 0, 1, 0, 0.707105, 0, 0.707105, 0, 0, 0)

[node name="Player" type="MeshInstance3D" parent="PlayerPath/PlayerPathFollow"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
mesh = SubResource("BoxMesh_wrw54")
skeleton = NodePath("../../..")

[node name="Area3D" type="Area3D" parent="PlayerPath/PlayerPathFollow/Player"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerPath/PlayerPathFollow/Player/Area3D"]
shape = SubResource("SphereShape3D_74w4j")

[node name="CSGPolygon3D" type="CSGPolygon3D" parent="."]
polygon = PackedVector2Array(0, 0, 0, 0.01, 0.01, 0.01, 0.01, 0)
mode = 2
path_node = NodePath("../PlayerPath")
path_interval_type = 0
path_interval = 0.03
path_simplify_angle = 0.0
path_rotation = 1
path_local = false
path_continuous_u = false
path_u_distance = 1.0
path_joined = false

[connection signal="input_event" from="PlayerPath/PlayerPathFollow/Player/Area3D" to="." method="_on_area_3d_input_event"]
